--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,30 @@
 .App {
-  text-align: center;
+  font-family: Arial, Helvetica, sans-serif;
+}
+body{
+  color: #f9f9f9;
+  background-image: linear-gradient(115deg, rgb(69, 84, 164) 5%, rgb(46, 139, 87) 100%);
+  margin: 20px;
+}
+
+p{
+  font-size: 18px;
+}
+
+.info{
+  width: 60%;
+}
+
+.chart{
+  color: rgb(49, 49, 49);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin: 20px;
+  background: #f9f9f9;
+  border-radius: 10px; 
+  padding-Left: 20px;
 }
 
 .App-logo {
