--- a/src/Styles/App.css
+++ b/src/Styles/App.css
@@ -1,6 +1,11 @@
 .App {
   font-family: Arial, Helvetica, sans-serif;
 }
+
+#header{
+  font-size: 26px;
+}
+
 body{
   color: #f9f9f9;
   background-image: linear-gradient(115deg, rgb(69, 84, 164) 5%, rgb(46, 139, 87) 100%);
