--- a/src/Styles/App.css
+++ b/src/Styles/App.css
@@ -1,68 +1,68 @@
-.App {
-  font-family: Arial, Helvetica, sans-serif;
-}
-
-#header{
-  font-size: 26px;
-}
-
-body{
-  color: #f9f9f9;
-  background-image: linear-gradient(115deg, rgb(69, 84, 164) 5%, rgb(46, 139, 87) 100%);
-  margin: 20px;
-}
-
-p{
-  font-size: 18px;
-}
-
-.info{
-  width: 60%;
-}
-
-.chart{
-  color: rgb(49, 49, 49);
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  margin: 20px;
-  background: #f9f9f9;
-  border-radius: 10px; 
-  padding-Left: 20px;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+body {
+  margin: 0;
+  font-family: 'Roboto', sans-serif;
+  background-color: #f4f4f9;
+  color: #333;
 }
 
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  padding: 20px;
   color: white;
+  text-align: center;
 }
 
-.App-link {
-  color: #61dafb;
+main {
+  padding: 20px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.card {
+  background: white;
+  border-radius: 8px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  margin-bottom: 20px;
+  padding: 20px;
+}
+
+.chart-container {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 20px;
+}
+
+.chart-container > .chart:nth-child(3) {
+  grid-column: span 2;
+}
+
+.chart {
+  border: 1px solid #e0e0e0;
+  background-color: #f7f7f7; /* Light grey background */
+  padding: 20px; /* Add padding for better spacing */
+  border-radius: 8px; /* Optional: Add border radius for rounded corners */
+}
+
+.card:nth-of-type(1) .chart:nth-child(3) {
+  max-width: 60%;
+  margin: 0 auto; /* Center the chart */
+}
+
+/* Specific styles for charts in the second card */
+.card:nth-of-type(2) .chart {
+  max-width: 60%; /* Adjust the max-width as needed */
+}
+
+.info {
+  margin: 20px 0;
+  width: 80%;
+}
+
+.slider-container {
+  display: flex;
+  justify-content: flex-end;
+  width: 100%;
+}
+
+.slider {
+  width: 60%;
+  margin-top: 10px;
 }
